#ifndef MYFINANCE_TYPEOPERATION_H
#define MYFINANCE_TYPEOPERATION_H


enum TypeOperation {
DEBIT, CREDIT
};


#endif //MYFINANCE_TYPEOPERATION_H
